--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <title>Robby Leonardi | hey@rleonardi.com</title>
+  <title>六角裤衩的交互式主页</title>
   <link href="./style.css" rel="stylesheet" />
  </head>
  <body style="position: relative; margin-top: 36px !important;">
@@ -276,7 +276,7 @@
        <div class="ribbon-relative">
         <div class="ribbon-left"></div>
         <div class="ribbon-middle">
-         Live and Work in New York City
+         Graduation trip to Los Angeles
         </div>
         <div class="ribbon-right"></div>
        </div>
