--- a/index.html
+++ b/index.html
@@ -689,10 +689,10 @@
       </div>
       <div class="experience-text-container" id="experience-text-container-1" style="bottom: 470.4px;">
        <div class="experience-text-a">
-        May 2005 - February 2006
+        Sep 2017 - June 2020
        </div>
        <div class="experience-text-b">
-        AOL
+        沈阳市第七中学
        </div>
        <div class="experience-text-d">
         Designed online advertising to promote many entertainment programs in AOL music website.
@@ -743,10 +743,10 @@
       </div>
       <div class="experience-text-container" id="experience-text-container-2" style="bottom: 470.4px;">
        <div class="experience-text-a">
-        April 2006 - April 2010
+        Sep 2020 - June 2023
        </div>
        <div class="experience-text-b">
-        INCOGNITO DIGITAL
+        沈阳市第二十七中学
        </div>
        <div class="experience-text-c">
         Designed and developed diverse online advertising projects such as rich media, banner, landing page, and microsite.
@@ -806,10 +806,10 @@
       </div>
       <div class="experience-text-container" id="experience-text-container-3" style="bottom: 470.4px;">
        <div class="experience-text-a">
-        August 2010 - February 2016
+        Sep 2023 - June 2027
        </div>
        <div class="experience-text-b">
-        FOX NEWS
+        东北财经大学
        </div>
        <div class="experience-text-e">
         Designed and developed website content such as static, animated, and interactive graphics for foxnews.com.
