--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
       <div class="tree-bright-d" id="tree-5"></div>
       <div class="tree-dark-b" id="tree-6"></div>
       <div id="title-robby"></div>
+       <img src="title-robby.png" alt="title robby" />
       <div class="tree-dark-c" id="tree-1"></div>
       <div class="tree-bright-e" id="tree-2"></div>
       <div class="tree-dark-b" id="tree-3"></div>
