--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
        <div class="ribbon-relative">
         <div class="ribbon-left"></div>
         <div class="ribbon-middle">
-         Multidisciplinary Designer
+        Skill Positioning
         </div>
         <div class="ribbon-right"></div>
        </div>
