--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       <div class="tree-bright-b" id="tree-17"></div>
       <div class="tree-dark-b" id="tree-18"></div>
       <div class="tree-bright-b" id="tree-19"></div>
-      <div class="building" id="building-1" style="left: 795px;">
+      <div class="building" id="building-1" style="left: 795px;" onclick="window.location.href='https://baike.baidu.com/item/%E8%87%AA%E7%94%B1%E5%A5%B3%E7%A5%9E%E5%83%8F/213393'">
        <div class="building-enemy-face-a">
         <div class="building-enemy-face-a-eyes"></div>
        </div>
