--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <div class="tree-bright-e" id="tree-24"></div>
       <div class="tree-dark-b" id="tree-25"></div>
       <div id="nba-rim-container">
-       <div id="nba-rim"></div>
+       <div id="nba-rim"  onclick="window.location.href='https://cn.bing.com/sportsdetails?q=nba%E8%B5%9B%E5%86%B5&sport=Basketball&scenario=League&TimezoneId=China%20Standard%20Time&IANATimezoneId=Asia/Shanghai&ISOTimezoneKey=CST&league=Basketball_NBA&intent=Score&seasonyear=2024&segment=sports&isl2=true&fromhere=1064746110&'"></div>
       </div>
       <div class="nba-board-blue" id="nba-board-1" style="bottom: 0px;">
        <div class="nba-text-container">
