--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <div class="building-leg-frame-a" id="building-1-leg-frame"></div>
        </div>
       </div>
-      <div class="building" id="building-2" style="left: 1100px;" onclick="window.location.href='https://baike.baidu.com/item/%E8%87%AA%E7%94%B1%E5%A5%B3%E7%A5%9E%E5%83%8F/213393'">
+      <div class="building" id="building-2" style="left: 1100px;" onclick="window.open('https://baike.baidu.com/item/%E8%87%AA%E7%94%B1%E5%A5%B3%E7%A5%9E%E5%83%8F/213393', '_blank')">
        <div class="building-enemy-face-b">
         <div class="building-enemy-face-b-eyes"></div>
        </div>
