--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
        <div class="ribbon-relative">
         <div class="ribbon-left"></div>
         <div class="ribbon-middle">
-         Graduation trip to Los Angeles
+         Graduation trip to the US
         </div>
         <div class="ribbon-right"></div>
        </div>
