--- a/index.html
+++ b/index.html
@@ -688,13 +688,13 @@
       </div>
       <div class="experience-text-container" id="experience-text-container-1" style="bottom: 470.4px;">
        <div class="experience-text-a">
-        Sep 2017 - June 2020
+        Sep 2023 - Apr 2024
        </div>
        <div class="experience-text-b">
-        沈阳市第七中学
+        创新创业训练计划
        </div>
        <div class="experience-text-d">
-        Designed online advertising to promote many entertainment programs in AOL music website.
+        进行UI设计并制作网页
        </div>
       </div>
       <div id="robot" style="left: 1000px;">
@@ -725,7 +725,7 @@
        <div class="ribbon-relative">
         <div class="ribbon-left"></div>
         <div class="ribbon-middle">
-         Working Experience 1
+         Contest Experience 1
         </div>
         <div class="ribbon-right"></div>
        </div>
@@ -742,13 +742,13 @@
       </div>
       <div class="experience-text-container" id="experience-text-container-2" style="bottom: 470.4px;">
        <div class="experience-text-a">
-        Sep 2020 - June 2023
+        Jan 2025
        </div>
        <div class="experience-text-b">
-        沈阳市第二十七中学
+        Comap
        </div>
        <div class="experience-text-c">
-        Designed and developed diverse online advertising projects such as rich media, banner, landing page, and microsite.
+        制作
        </div>
       </div>
       <div id="squid" style="left: 1000px;">
@@ -771,13 +771,13 @@
          15%
         </div>
         <div class="piechart-text-c" id="piechart-incognito-text-animation-1" style="opacity: 0;">
-         ANIMATION
+         CODE
         </div>
         <div class="piechart-text-d" id="piechart-incognito-text-animation-2" style="opacity: 0;">
          70%
         </div>
         <div class="piechart-text-a" id="piechart-incognito-text-code-1" style="opacity: 0;">
-         CODE
+         Modeling
         </div>
         <div class="piechart-text-b" id="piechart-incognito-text-code-2" style="opacity: 0;">
          15%
@@ -788,7 +788,7 @@
        <div class="ribbon-relative">
         <div class="ribbon-left"></div>
         <div class="ribbon-middle">
-         Working Experience 2
+         Contest Experience 2
         </div>
         <div class="ribbon-right"></div>
        </div>
@@ -805,10 +805,10 @@
       </div>
       <div class="experience-text-container" id="experience-text-container-3" style="bottom: 470.4px;">
        <div class="experience-text-a">
-        Sep 2023 - June 2027
+        Sep 2024 - Mar 2025
        </div>
        <div class="experience-text-b">
-        东北财经大学
+        挑战杯
        </div>
        <div class="experience-text-e">
         Designed and developed website content such as static, animated, and interactive graphics for foxnews.com.
@@ -822,19 +822,19 @@
         <div class="piechart-back"></div>
         <div id="piechart-foxnews-front" style="opacity: 0;"></div>
         <div class="piechart-text-c" id="piechart-foxnews-text-graphic-1" style="opacity: 0;">
-         GRAPHIC
+         PPT
         </div>
         <div class="piechart-text-d" id="piechart-foxnews-text-graphic-2" style="opacity: 0;">
          70%
         </div>
         <div class="piechart-text-a" id="piechart-foxnews-text-animation-1" style="opacity: 0;">
-         ANIMATION
+         Document
         </div>
         <div class="piechart-text-b" id="piechart-foxnews-text-animation-2" style="opacity: 0;">
          15%
         </div>
         <div class="piechart-text-a" id="piechart-foxnews-text-code-1" style="opacity: 0;">
-         CODE
+         Video
         </div>
         <div class="piechart-text-b" id="piechart-foxnews-text-code-2" style="opacity: 0;">
          15%
@@ -845,7 +845,7 @@
        <div class="ribbon-relative">
         <div class="ribbon-left"></div>
         <div class="ribbon-middle">
-         Working Experience 3
+         Contest Experience 3
         </div>
         <div class="ribbon-right"></div>
        </div>
