--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
         Sep 2023 - Apr 2024
        </div>
        <div class="experience-text-b">
-        创新创业训练计划
+        创新创业训练
        </div>
        <div class="experience-text-d">
         进行UI设计并制作网页
