--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
         </div>
        </div>
       </div>
-      <div class="ribbon-container">
+      <div class="ribbon-container" style="position: relative; top: -10px;">
        <div class="ribbon-relative">
         <div class="ribbon-left"></div>
         <div class="ribbon-middle">
