--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
         Jan 2025
        </div>
        <div class="experience-text-b">
-        Comap
+        COMAP
        </div>
        <div class="experience-text-c">
         制作
@@ -773,7 +773,7 @@
         <div class="piechart-text-c" id="piechart-incognito-text-animation-1" style="opacity: 0;">
          CODE
         </div>
-        <div class="piechart-text-d" id="piechart-incognito-text-animation-2" style="opacity: 0;">
+        <div class="piechart-text-d" id="piechart-incognito-text-animation-2" style="opacity: 0; margin-top: 2px;">
          70%
         </div>
         <div class="piechart-text-a" id="piechart-incognito-text-code-1" style="opacity: 0;">
