--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
         <div class="piechart-text-a" id="piechart-incognito-text-code-1" style="opacity: 0;">
          Modeling
         </div>
-        <div class="piechart-text-b" id="piechart-incognito-text-code-2" style="opacity: 0;">
+        <div class="piechart-text-b" id="piechart-incognito-text-code-2" style="opacity: 0; font-size: 2px;">
          15%
         </div>
        </div>
