--- a/index.html
+++ b/index.html
@@ -776,8 +776,8 @@
         <div class="piechart-text-d" id="piechart-incognito-text-animation-2" style="opacity: 0; margin-top: 2px;">
          70%
         </div>
-        <div class="piechart-text-a" id="piechart-incognito-text-code-1" style="opacity: 0; font-size: 2px;">
-         Modeling
+        <div class="piechart-text-a" id="piechart-incognito-text-code-1" style="opacity: 0;">
+         Model
         </div>
         <div class="piechart-text-b" id="piechart-incognito-text-code-2" style="opacity: 0;">
          15%
