--- a/index.html
+++ b/index.html
@@ -878,11 +878,11 @@
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-b">
-         文抗优秀舞蹈演员
+         优秀舞蹈演员
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-c">
-         东北财经大学
+         东北财经大学文抗
         </div>
         <div class="banner-button">
          <a href="http://www.webbyawards.com/winners/2014/web/general-website/self-promotionportfolio/robby-leonardis-interactive-resume/" target="_blank"><img src="./images/banner-button.png" /></a>
@@ -918,11 +918,11 @@
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-b">
-         大创结项——创新训练
+         大创省级结项
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-c">
-         省级结项
+         创新训练
         </div>
         <div class="banner-button">
          <a href="http://www.thefwa.com/article/the-making-of-robby-leonardi-s-interactive-resume" target="_blank"><img src="./images/banner-button.png" /></a>
@@ -978,7 +978,7 @@
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-b">
-        三下乡——云南
+        三下乡—云南
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-c">
@@ -998,7 +998,7 @@
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-b">
-        三下乡——沈阳
+        三下乡—沈阳
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-c">
