--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
         <div class="robot-hand-c" style="opacity: 0;"></div>
         <div class="robot-hand-d" style="opacity: 0;"></div>
        </div>
-       <div class="piechart" id="piechart-aol" onclick="window.open('images/网页1.jpg', '_blank')">
+       <div class="piechart" id="piechart-aol" onclick="window.open('images/网页1.png', '_blank')">
         <div class="piechart-back"></div>
         <div class="piechart-text-c" id="piechart-aol-text-graphic-1" style="opacity: 0;">
          GRAPHIC
