--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
        <div class="squid-hand-close" id="squid-hand-close-3" style="opacity: 0;"></div>
        <div class="squid-hand-close" id="squid-hand-close-4" style="opacity: 0;"></div>
        <div id="squid-body"></div>
-       <div class="piechart" id="piechart-incognito">
+       <div class="piechart" id="piechart-incognito" onclick="window.open('images/美赛GRAPHIC.png', '_blank')">
         <div class="piechart-back"></div>
         <div id="piechart-incognito-front" style="opacity: 0;"></div>
         <div class="piechart-text-a" id="piechart-incognito-text-graphic-1" style="opacity: 0;">
