--- a/index.html
+++ b/index.html
@@ -1105,7 +1105,7 @@
          Website of the Day
         </div>
         <div class="banner-button">
-         <a href="http://www.csswinner.com/details/robby-leonardi/5910/" target="_blank"><img src="./images/banner-button.png" /></a>
+         <a href="https://kns.cnki.net/nzkhtml/xmlRead/trialRead.html?dbCode=CAPJ&tableName=CAPJTOTAL&fileName=GYLG20250604001&fileSourceType=1&appId=KNS_BASIC_PSMC&invoice=Lxbls1uWTANpcf1/qm4xbr9KnlE8aJ2er1tj/XADSF4/7alfEt8WWiJTcsiSHUcZUG9i9VRAAXKycRtneUD2/UGDflv5uCR1Nnozq0REW/aJYhOagVMozsFOoZ4viH/MP+mysqP2L6SODU/We4hGRk16DgCgH2KE60oW9FmdJoE=" target="_blank"><img src="./images/banner-button.png" /></a>
         </div>
        </div>
        <div class="banner-bottom-a"></div>
