--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@
          Winner of the Day
         </div>
         <div class="banner-button">
-         <a href="http://www.cssdesignawards.com/sites/robby-leonardi/23615/" target="_blank"><img src="./images/banner-button.png" /></a>
+         <a href="https://kns.cnki.net/nzkhtml/xmlRead/trialRead.html?dbCode=CJFD&tableName=CJFDTOTAL&fileName=SCXH202512041&fileSourceType=1&appId=KNS_BASIC_PSMC&invoice=u6UKnpIF0W96sgFDB5SgHVjKRrfkUYcqqk+D4YkzmIpp7oxvk4sl/KB79KSv7q0CVvS3+p+OMsW2oLabTHjwEnIOv+YVxJEMtha6bZeSGLgUP61/1nSTYK9ISXPukQxoxfmuIDporDOBAtPDur3+z9UOU9RopdUyOcsr4hsDQYI=" target="_blank"><img src="./images/banner-button.png" /></a>
         </div>
        </div>
        <div class="banner-bottom-b"></div>
