--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@
         校二等奖
         </div>
         <div class="banner-button">
-         <a href="/images/WPS图片(1).png" target="_blank"><img src="./images/banner-button.png" /></a>
+         <a href="images/WPS图片(1).png" target="_blank"><img src="./images/banner-button.png" /></a>
         </div>
        </div>
        <div class="banner-bottom-a"></div>
@@ -1005,7 +1005,7 @@
         校三等奖
         </div>
         <div class="banner-button">
-         <a href="/images/WPS图片(2).png" target="_blank"><img src="./images/banner-button.png" /></a>
+         <a href="images/WPS图片(2).png" target="_blank"><img src="./images/banner-button.png" /></a>
         </div>
        </div>
        <div class="banner-bottom-b"></div>
@@ -1025,7 +1025,7 @@
         荣誉证书
         </div>
         <div class="banner-button">
-         <a href="/images/微信图片_20250219102128.jpg" target="_blank"><img src="./images/banner-button.png" /></a>
+         <a href="images/微信图片_20250219102128.jpg" target="_blank"><img src="./images/banner-button.png" /></a>
         </div>
        </div>
        <div class="banner-bottom-a"></div>
