--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
          创新训练
         </div>
         <div class="banner-button">
-         <a href="http://www.thefwa.com/article/the-making-of-robby-leonardi-s-interactive-resume" target="_blank"><img src="./images/banner-button.png" /></a>
+         <a href="images/111.jpg" target="_blank"><img src="./images/banner-button.png" /></a>
         </div>
        </div>
        <div class="banner-bottom-b"></div>
