--- a/index.html
+++ b/index.html
@@ -1074,15 +1074,15 @@
        <div class="banner-top-b"></div>
        <div class="banner-middle-b">
         <div class="banner-text-a">
-         October 21, 2013
+        May, 2025
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-b">
-         CSS DESIGN AWARDS
+        供应链金融研究
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-c">
-         Winner of the Day
+        Tong Shu-rui
         </div>
         <div class="banner-button">
          <a href="https://kns.cnki.net/nzkhtml/xmlRead/trialRead.html?dbCode=CJFD&tableName=CJFDTOTAL&fileName=SCXH202512041&fileSourceType=1&appId=KNS_BASIC_PSMC&invoice=u6UKnpIF0W96sgFDB5SgHVjKRrfkUYcqqk+D4YkzmIpp7oxvk4sl/KB79KSv7q0CVvS3+p+OMsW2oLabTHjwEnIOv+YVxJEMtha6bZeSGLgUP61/1nSTYK9ISXPukQxoxfmuIDporDOBAtPDur3+z9UOU9RopdUyOcsr4hsDQYI=" target="_blank"><img src="./images/banner-button.png" /></a>
@@ -1094,15 +1094,15 @@
        <div class="banner-top-a"></div>
        <div class="banner-middle-a">
         <div class="banner-text-a">
-         October 18, 2013
+         June 5, 2025
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-b">
-         CSS WINNER
+         Fintech Development and Firms’ Supply Chain Resilience
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-c">
-         Website of the Day
+         YE Yun-ling LIU Si-liang WU Nai-qian
         </div>
         <div class="banner-button">
          <a href="https://kns.cnki.net/nzkhtml/xmlRead/trialRead.html?dbCode=CAPJ&tableName=CAPJTOTAL&fileName=GYLG20250604001&fileSourceType=1&appId=KNS_BASIC_PSMC&invoice=Lxbls1uWTANpcf1/qm4xbr9KnlE8aJ2er1tj/XADSF4/7alfEt8WWiJTcsiSHUcZUG9i9VRAAXKycRtneUD2/UGDflv5uCR1Nnozq0REW/aJYhOagVMozsFOoZ4viH/MP+mysqP2L6SODU/We4hGRk16DgCgH2KE60oW9FmdJoE=" target="_blank"><img src="./images/banner-button.png" /></a>
