--- a/index.html
+++ b/index.html
@@ -1078,7 +1078,7 @@
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-b">
-        供应链金融研究
+        供应链金融
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-c">
@@ -1098,7 +1098,7 @@
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-b">
-         Fintech Development and Firms’ Supply Chain Resilience
+        Fintech Development and Firms’ Supply Chain Resilience
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-c">
