--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,7 @@
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-b">
-        基于上下游关联视角的金融科技发展与企业供应链韧性研究
+        金融科技发展研究
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-c">
