--- a/index.html
+++ b/index.html
@@ -1098,7 +1098,7 @@
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-b">
-        金融科技发展研究
+        金融科技发展
         </div>
         <div class="banner-line"></div>
         <div class="banner-text-c">
